--- a/actors.css
+++ b/actors.css
@@ -21,7 +21,7 @@ li, a{
 .nav_links{
     
     list-style: none;
-    background-color: darkorchid;
+    background-color: #ffffff;
     padding-top: 20px;
     padding-bottom: 20px;
     display: flex;
